<resources>
    <string name="app_name" translatable="false">TopNews</string>
    <string name="empty_view_text">No Articles Found</string>
    <string name="empty_view_search">No Articles\nTry to search again!</string>

    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_read_article">Read Article</string>
    <string name="action_remove">Remove</string>
    <string name="action_share">Share link</string>
    <string name="action_save_for_later">Save for later</string>

    <string name="article_saved">Article saved</string>
    <string name="article_removed">Article removed</string>
    <string name="share_link">Share: %s</string>
    <string name="link_copied">Link copied</string>

    <string name="top_news">Top News</string>
    <string name="headlines">Headlines</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>

    <string name="error_no_internet">No Internet connection!</string>
</resources>
